# gnome_workouts

./: .gitignore  README.md  io.github.AronCalvert.Workouts.yml  meson.build
.well-known/: org.flathub.VerifiedApps.txt
data/: io.github.AronCalvert.Workouts.gschema.xml  io.github.AronCalvert.Workouts.metainfo.xml.in  meson.build
gnome_workouts/: db.py  models.py
gnome_workouts/pages/: main_page.py  workout_detail_page.py  workout_run_page.py
src/: app.py  db.py  meson.build  models.py  prefs.py  sound.py  ui_utils.py  window.py
src/pages/: main_page.py  progress_page.py  workout_detail_page.py  workout_run_page.py
src/widgets/: timer_widget.py
